--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,41 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Examples
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-label>Working example</ion-label>
+  <hr>
+
+  <form [formGroup]="workingForm">
+
+    <app-input-form-control formControlName="name"
+                            label="Name">
+    </app-input-form-control>
+
+  </form>
+
+  <ion-note>
+    I have <b>item-interactive-disabled</b> class inside of ion-item.
+  </ion-note>
+
+  <br /><br />
+
+  <ion-label>Not working example</ion-label>
+  <hr>
+
+  <form [formGroup]="notWorkingForm">
+
+    <app-credit-card-details formControlName="creditCard"></app-credit-card-details>
+
+  </form>
+
+  <ion-note>
+    I don't have <b>item-interactive-disabled</b> class inside of ion-item.
+  </ion-note>
+
 </ion-content>
