--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,25 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.form-group {
+
+  ion-item {
+
+    &.item-interactive-disabled {
+      --background: #CCC;
+      opacity: .85;
+
+      ion-input {
+        --color: #5B6486;
+
+        // Overriding the default opacity of the inner input
+        .native-input {
+          opacity: 1 !important;
+        }
+      }
+    }
+
+  }
+
+}
